--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -16,11 +16,12 @@
         <h2 <style'font-size:100px;'>&#9749;</style>COLLEGE SECTION</h2>
     </marquee>
     <hr>
-                                                    <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><br><h9 class="te">Click on this arrow</h9><br> 
-    <hr>
-    <a href="https://wa.me/" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
-    <hr>
-    <div class="container-2"> 
+    <div class="page">
+ <a class="page2"href="content.html"><i class="fa-solid fa-house fa-2xl" style="color: #FFD43B;"></i></a> 
+  <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
+                            </div>
+<br>
+     <div class="container-2"> 
         <div class="row-2">
             <div class="col"> 
             <div> 
@@ -124,6 +125,15 @@
           .border{
     background-color: forestgreen;
   }
+  .page{
+        margin-left: 1cm;
+    }
+    .page2{
+        margin-left: 1.5cm;
+    }
+    .page3{
+        margin-left: 2cm;
+    }
  .te{
     text-align: center;
     color:greenyellow;
