--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -10,18 +10,22 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <marquee direction="left" scrollamount="4" scrolldelay="3">
     <h2 <style'font-size:100px;'>&#9749;</style>SCHOOL SECTION</h2>
 </marquee>
 <hr>
-                                                        <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><br><h9 class="te">Click on thisarrow</h9><br> 
-  <hr>
+<div class="page">
+ <a class="page2"href="content.html"><i class="fa-solid fa-house fa-2xl" style="color: #FFD43B;"></i></a> 
+  <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
+                            </div>
+                               <hr>
   <div class="box"> 
  <div id="slides"> 
      <div class="slide slide-1" > 
-    <img src= "https://i.im.ge/2025/01/15/zBjSZq.1000016724.webp"> 
+    <img src= "https://i.im.ge/2025/01/15/zBjSZq.1000016724.webp">
 </div>
 <div class="slide slide-2"> 
      <img src=" https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg"> 
@@ -159,10 +163,19 @@
         overflow: hidden;
         position: relative;
     }
+    .page{
+        margin-left: 1cm;
+    }
+    .page2{
+        margin-left: 1.5cm;
+    }
+    .page3{
+        margin-left: 2cm;
+    }
     .slide{
         position: absolute;
         height: 250px;
-        opacity: 0;
+        opacity: 3cm;
         animation: slide-show 12s infinite;
     }
     .slide-2{
