--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <img src="https://ik.imagekit.io/Deepak2005/1000035329.jpg?updatedAt=1753034592728">
-    <a href="about.html"><h2>ENTER WEBSITE</h2></a>
+    <a href="content.html"><h2>ENTER WEBSITE</h2></a>
     <style>
         img{
             margin-left: 1cm;
@@ -17,9 +17,13 @@
             margin-top: 5cm;
         }
         h2{
-            text-align: center;
+           margin-left: 1cm;
             color: chartreuse;
             text-shadow: 3cm;
+            background-color: crimson;
+        }
+        h2:hover{
+         background-color: khaki;
         }
         a{
             text-decoration: none;
