--- a/notes.html
+++ b/notes.html
@@ -16,9 +16,13 @@
     <h2 <style'font-size:100px;'>&#9749;</style>RANDOM NOTES SECTION</h2>
 </marquee>
 <br>
-                                        <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><br><h9 class="te">click on this arrow<h9><br> 
- <hr>
- <a href="https://wa.me/" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
+<div class="page">
+ <a class="page2"href="content.html"><i class="fa-solid fa-house fa-2xl" style="color: #FFD43B;"></i></a> 
+  <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
+                            </div>
+
+  <hr>
+ <a href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
   <hr>  
   <div class="que">
   <a href="https://drive.google.com/file/d/1Wn8qVaMlBcAJCTk3whyxITKugNyzrFVs/view?usp=gmail">Computer-concept in hindi</a><sub><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sub>  
@@ -85,6 +89,15 @@
     background-color: gold;
     color: black;
    }
+   .page{
+        margin-left: 1cm;
+    }
+    .page2{
+        margin-left: 1.5cm;
+    }
+    .page3{
+        margin-left: 2cm;
+    }
  </style>
 </body>
 </html>
