--- a/otherwebsite.html
+++ b/otherwebsite.html
@@ -18,8 +18,13 @@
    <marquee class="mar">
         <h2 <style'font-size:100px;'>&#9749;</style>other websites</h2>
     </marquee>
-                                               <a href="goback.html"><img class="lapto" src="images/go back.jpg"></a><br><h9 class="te">Click on this arrow</h9><br> 
-     <div class="box">
+    <br>
+    <div class="page">
+ <a class="page2"href="content.html"><i class="fa-solid fa-house fa-2xl" style="color: #FFD43B;"></i></a> 
+  <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
+                            </div>
+<br>
+      <div class="box">
       <div class="deep1"> 
         <a href="https://bseh.org.in/home/"><img class="laptop" src="images/hbse.png"></a><h9 class="te">HBSE</h9><br>
         </div>
@@ -91,5 +96,14 @@
   .box{
     background-color: aquamarine;
   }
+  .page{
+        margin-left: 1cm;
+    }
+    .page2{
+        margin-left: 1.5cm;
+    }
+    .page3{
+        margin-left: 2cm;
+    }
 </style>
 </html>
