--- a/about.html
+++ b/about.html
@@ -16,8 +16,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
   </head>
  <body> 
-    <br><a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><br><h9 class="te">Click on this arrow</h9>
-                                         <hr>  
+  <br>
+          <div class="page">
+ <a class="page2"href="content.html"><i class="fa-solid fa-house fa-2xl" style="color: #FFD43B;"></i></a> 
+  <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
+                            </div>
+                                <hr>  
     <div class="card-header"> 
       <div class="card">
       <div class="card-body">
@@ -171,6 +175,15 @@ and you can write your problems ,then i will suggest you</h4>
   .annou{
     margin-left: 2cm;
   }
+  .page{
+        margin-left: 1cm;
+    }
+    .page2{
+        margin-left: 1.5cm;
+    }
+    .page3{
+        margin-left: 2cm;
+    }
   .laptop{
         margin-left: 3cm;
     height: 150px;
