--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -22,20 +22,7 @@
   <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
                             </div>
                                <hr>
-  <div class="box"> 
- <div id="slides"> 
-     <div class="slide slide-1" > 
-    <img src= "https://i.im.ge/2025/01/15/zBjSZq.1000016724.webp">
-</div>
-<div class="slide slide-2"> 
-     <img src=" https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg"> 
-    </div>
-<div class="slide slide-3"> 
-    <img src= " ttps://i.im.ge/2025/03/11/p2wQPC.1000022996.jpeg">
-</div>
-</div>
-</div>
-<hr>
+ <hr>
 <div class="container-2"> 
     <div class="row-2">
         <div class="col"> 
@@ -114,29 +101,13 @@
         border-radius: 10cm;
     }
      body{
- background-image: URL("https://wallpapercave.com/wp/uYnlCfL.jpg");
-        background-repeat: no-repeat;
-        background-size: 400% 400%;
-            animation: bg 12s ease-in-out infinite;
-            margin-right: 10px;
-            margin-left: 10px;
-        }  
-        @keyframes bg{
-          0%{
-            background-position: 0% 50%;
-          }
-          50%{
-            background-position: 100% 100%;
-          }
-          100%{
-            background-position: 0% 50%;
-          }
-    }
+  background-color: azure;
+     }
    .te{
     text-align: center;
     margin-left: 2.2cm;
     color:greenyellow;
-  }
+   }
   .laptop{
         margin-left: 3cm;
     height: 150px;
@@ -172,40 +143,8 @@
     .page3{
         margin-left: 2cm;
     }
-    .slide{
-        position: absolute;
-        height: 250px;
-        opacity: 3cm;
-        animation: slide-show 12s infinite;
-    }
-    .slide-2{
-        animation-delay: 3s;
-    }
-    .slide-3{
-        animation-delay: 3s;
-    }
-    .slide img{
-        width: 250px;
-        height:250px; 
-          border-radius: 100%;
-          margin-left: 1cm;
-    }
-    @keyframes slide-show{
-        0%{
-            opacity: 0;
-        }
-        10%{
-            opacity: 1;
-        }
-        20%,
-        30%{
-            opacity: 1;
-            scale:1.03;
-        }
-        50%{
-            opacity: 0;
-        }
-    } 
+     
+    
   table th td tr.colsetwidth{
     width: 50%;
   }
