--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="https://ik.imagekit.io/Deepak2005/1000035329.jpg?updatedAt=1753034592728">
-    <a href="content.html"><h2>ENTER WEBSITE</h2></a>
-    <style>
-        img{
+    <div class="box"> 
+     <img src="images/SxRHd0zeO56LQk7Tgz.gif">
+     <a href="content.html"><h2>ENTER Website</h2></a> </a>
+     </div>
+     <style>
+                img{
             margin-left: 1cm;
             height: 250px;
             width: 250px;
             border-radius: 5cm;
             margin-top: 5cm;
         }
-        h2{
-           margin-left: 1cm;
+          h2{
+           margin-left: 2cm;
             color: chartreuse;
             text-shadow: 3cm;
             background-color: crimson;
-        }
+            width: 160px;
+         }
         h2:hover{
          background-color: khaki;
         }
