--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
  <body> 
   <br>
           <div class="page">
+            <img class="pic" src="images/SxRHd0zeO56LQk7Tgz.gif">
  <a class="page2"href="content.html"><i class="fa-solid fa-house fa-2xl" style="color: #FFD43B;"></i></a> 
   <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
                             </div>
@@ -160,6 +161,10 @@ and you can write your problems ,then i will suggest you</h4>
   }
   .hjo{
     color: black;
+  }
+  .pic{
+    width: 50px;
+    height: 50px;
   }
   .genius{
     margin-left: 2cm;
