--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                   <h1>home section</h1>
              <h4>Home section contains three parts:
               <br>first for videos ,videos will be entertainment,motivational,thought<br>study related<br>second for section details ,which we have already discussed in section details and third for contact ,onecan contact me on whatshap or email
-and you can write your problems ,then i will suggest you</h4>    
+and you can write your problems ,then i will suggest you<c:\Users\DELL\Downloads\786994_C_adbanao.png/h4>    
                    <br>
               <h1>random notes</h1>
       <h4> random notes will conatin all general notes  for incresaing knowlege</h4>
