--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="box"> 
-     <img src="images/SxRHd0zeO56LQk7Tgz.gif">
+     <img src="images/786994_C_adbanao.png">
      <a href="content.html"><h2>ENTER Website</h2></a> </a>
      </div>
      <style>
