--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -16,11 +16,18 @@
         <h2 <style'font-size:100px;'>&#9749;</style>COLLEGE SECTION</h2>
     </marquee>
     <hr>
-    <div class="page">
- <a class="page2"href="content.html"><i class="fa-solid fa-house fa-2xl" style="color: #FFD43B;"></i></a> 
-  <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
-                            </div>
-<br>
+    <div class="dropdown">
+     <button class=" dropdown-toggle" data-bs-toggle="dropdown">SELECT ONE WEBPAGE</button> 
+     <ul class="dropdown-menu">
+      <li><a clss="dropdown-item" href="notes.html"><h9> random notes</h9></a></li>
+       <li><a clss="dropdown-item" href="Squestionpaper.html"><h9>School section</h9></a></li> 
+      <li><a clss="dropdown-item" href="otherwebsite.html"><h9>Some other websites</h9></a></li>
+            <li><a clss="dropdown-item" href="about.html"><h9>HOME</h9></a></li>
+
+    </ul>
+    <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
+ </div>
+  <br>
      <div class="container-2"> 
         <div class="row-2">
             <div class="col"> 
@@ -179,6 +186,21 @@
         a{
             text-decoration: none;
             text-shadow: 1px 1px 2px paleturquoise;
+        }
+        .dropdown{
+            text-align: center;
+         }
+         .dropdown-toggle{
+            color: red;
+            background-color: black;
+         }
+        .dropdown-menu{
+            text-align: center;
+            color: red;
+            background-color: black;
+        }
+        h9{
+            color: chartreuse;
         }
     </style>
 </body>
