--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+ 
   </head>
  <body> 
   <br>
@@ -52,6 +53,16 @@
 </div>
 </div>
 <hr>
+<div class="dropdown">
+     <button class=" dropdown-toggle" data-bs-toggle="dropdown">SELECT ONE WEBPAGE</button> 
+     <ul class="dropdown-menu">
+      <li><a clss="dropdown-item" href="notes.html"><h9> random notes</h9></a></li>
+            <li><a clss="dropdown-item" href="Cquestionpaper.html"><h9>College section</h9></a></li>
+      <li><a clss="dropdown-item" href="Squestionpaper.html"><h9>School section</h9></a></li> 
+      <li><a clss="dropdown-item" href="otherwebsite.html"><h9>Some other websites</h9></a></li>
+    </ul>
+ </div>
+ <br>
 <div class="box-56"> 
  <h1 class="cen">NOTIFICATIONS</h1>
   <marquee direction="down" scrollamount="4" scrolldelay="3">
@@ -154,8 +165,22 @@ and you can write your problems ,then i will suggest you<c:\Users\DELL\Downloads
 </div>
 </div>
 <hr>
+<div class="border-2">
+                    website updated on: 01-August-2025 19:06 PM<br>
+                    Website maintained,devloped by DEEPAK AGGARWAL
+                    <hr>
+                    <h7>Contact:8684899869</h7>
+                </div>
+
 </body>
 <style>
+    .border-2{
+        background-color: cadetblue;
+    }
+    h7{
+        text-align: center;
+    } 
+
   .cen{
     text-align: center;
   }
@@ -165,6 +190,11 @@ and you can write your problems ,then i will suggest you<c:\Users\DELL\Downloads
   .pic{
     width: 50px;
     height: 50px;
+  }
+  .dropdown-toggle{
+    background-color: black;
+    color: red;
+    text-align: center;
   }
   .genius{
     margin-left: 2cm;
@@ -177,7 +207,7 @@ and you can write your problems ,then i will suggest you<c:\Users\DELL\Downloads
   .genius{
     height: 150px;
   }
-  .annou{
+   .annou{
     margin-left: 2cm;
   }
   .page{
@@ -189,7 +219,7 @@ and you can write your problems ,then i will suggest you<c:\Users\DELL\Downloads
     .page3{
         margin-left: 2cm;
     }
-  .laptop{
+   .laptop{
         margin-left: 3cm;
     height: 150px;
     width: 150px;
@@ -335,9 +365,9 @@ height: 40px;
         border-radius: 20px;
         border-top: 20px;
       }
-      a{
-        color:white
-      }
+       a{
+        color:white;
+       }
       table th td tr.colsetwidth{
         width: 50%;
       }
@@ -350,8 +380,14 @@ height: 40px;
         width: 100px;
         border-radius: 10cm;
        }
+       h9{
+        color: darkcyan;
+        }
        .card-footer{
         background-color: black;
        }
-    </style>
+       .dropdown{
+        text-align: center;
+       }
+     </style>
  </html>
