--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="box"> 
      <img src="images/786994_C_adbanao.png">
-     <a href="content.html"><h2>ENTER Website</h2></a> </a>
+     <a href="about.html"><h2>ENTER Website</h2></a> </a>
      </div>
      <style>
                 img{
