--- a/otherwebsite.html
+++ b/otherwebsite.html
@@ -19,11 +19,19 @@
         <h2 <style'font-size:100px;'>&#9749;</style>other websites</h2>
     </marquee>
     <br>
-    <div class="page">
- <a class="page2"href="content.html"><i class="fa-solid fa-house fa-2xl" style="color: #FFD43B;"></i></a> 
-  <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
-                            </div>
-<br>
+        <div class="dropdown">
+     <button class=" dropdown-toggle" data-bs-toggle="dropdown">SELECT ONE WEBPAGE</button> 
+     <ul class="dropdown-menu">
+      <li><a clss="dropdown-item" href="notes.html"><h9> random notes</h9></a></li>
+       <li><a clss="dropdown-item" href="Squestionpaper.html"><h9>School section</h9></a></li> 
+                   <li><a clss="dropdown-item" href="Cquestionpaper.html"><h9>College section</h9></a></li>
+            <li><a clss="dropdown-item" href="about.html"><h9>HOME</h9></a></li>
+
+     </ul>
+    <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
+ </div>
+
+ <br>
       <div class="box">
       <div class="deep1"> 
         <a href="https://bseh.org.in/home/"><img class="laptop" src="images/hbse.png"></a><h9 class="te">HBSE</h9><br>
@@ -96,14 +104,24 @@
   .box{
     background-color: aquamarine;
   }
-  .page{
-        margin-left: 1cm;
-    }
-    .page2{
-        margin-left: 1.5cm;
-    }
-    .page3{
+     .page3{
         margin-left: 2cm;
     }
+            .dropdown{
+            text-align: center;
+         }
+         .dropdown-toggle{
+            color: red;
+            background-color: black;
+         }
+        .dropdown-menu{
+            text-align: center;
+            color: red;
+            background-color: black;
+        }
+        h9{
+            color: chartreuse;
+        }
+
 </style>
 </html>
