--- a/notes.html
+++ b/notes.html
@@ -16,11 +16,19 @@
     <h2 <style'font-size:100px;'>&#9749;</style>RANDOM NOTES SECTION</h2>
 </marquee>
 <br>
-<div class="page">
- <a class="page2"href="content.html"><i class="fa-solid fa-house fa-2xl" style="color: #FFD43B;"></i></a> 
-  <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
-                            </div>
-  <hr>
+    <div class="dropdown">
+     <button class=" dropdown-toggle" data-bs-toggle="dropdown">SELECT ONE WEBPAGE</button> 
+     <ul class="dropdown-menu">
+        <li><a clss="dropdown-item" href="Squestionpaper.html"><h9>School section</h9></a></li> 
+      <li><a clss="dropdown-item" href="otherwebsite.html"><h9>Some other websites</h9></a></li>
+                  <li><a clss="dropdown-item" href="about.html"><h9>HOME</h9></a></li>
+            <li><a clss="dropdown-item" href="Cquestionpaper.html"><h9>College section</h9></a></li>
+
+    </ul>
+    <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
+ </div>
+
+   <hr>
    <div class="que">
   <a href="https://drive.google.com/file/d/1Wn8qVaMlBcAJCTk3whyxITKugNyzrFVs/view?usp=gmail">Computer-concept in hindi</a><sub><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sub>  
 </div>
@@ -86,15 +94,25 @@
     background-color: gold;
     color: black;
    }
-   .page{
-        margin-left: 1cm;
-    }
-    .page2{
-        margin-left: 1.5cm;
-    }
-    .page3{
+     .page3{
         margin-left: 2cm;
     }
+            .dropdown{
+            text-align: center;
+         }
+         .dropdown-toggle{
+            color: red;
+            background-color: black;
+         }
+        .dropdown-menu{
+            text-align: center;
+            color: red;
+            background-color: black;
+        }
+        h9{
+            color: chartreuse;
+        }
+
  </style>
 </body>
 </html>
