--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -192,12 +192,12 @@
          }
          .dropdown-toggle{
             color: red;
-            background-color: black;
+            background-color:yellow;
          }
         .dropdown-menu{
             text-align: center;
             color: red;
-            background-color: black;
+            background-color:darkcyan;
         }
         h9{
             color: chartreuse;
