--- a/notes.html
+++ b/notes.html
@@ -107,7 +107,7 @@
         .dropdown-menu{
             text-align: center;
             color: red;
-            background-color: black;
+            background-color: peachpuff;
         }
         h9{
             color: chartreuse;
