--- a/otherwebsite.html
+++ b/otherwebsite.html
@@ -117,7 +117,7 @@
         .dropdown-menu{
             text-align: center;
             color: red;
-            background-color: black;
+            background-color: olive;
         }
         h9{
             color: chartreuse;
