--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-    <div class="box"> 
-     <img src="images/786994_C_adbanao.png">
-     <a href="about.html"><h2>ENTER Website</h2></a> </a>
+     <div class="box"> 
+      <img src="images/786994_C_adbanao.png">
+      <button class="btn btn-danger"><a href="about.html">ENTER Website</a></button>
+      <button class="btn btn-dark"> <a href="https://qr.me-qr.com/link-list/o5V6wNPO/show">Visit my V-CARD</a></button>
      </div>
      <style>
                 img{
@@ -18,7 +20,10 @@
             border-radius: 5cm;
             margin-top: 5cm;
         }
-          h2{
+        h3{
+            margin-top: 5cms;
+        }
+           h2{
            margin-left: 2cm;
             color: chartreuse;
             text-shadow: 3cm;
@@ -30,7 +35,11 @@
         }
         a{
             text-decoration: none;
+            color: greenyellow;
         }
-    </style>
+        button{
+            margin-left: 0.5cm;
+        }
+     </style>
 </body>
 </html>
