--- a/about.html
+++ b/about.html
@@ -20,9 +20,10 @@
   <br>
           <div class="page">
             <img class="pic" src="images/SxRHd0zeO56LQk7Tgz.gif">
- <a class="page2"href="content.html"><i class="fa-solid fa-house fa-2xl" style="color: #FFD43B;"></i></a> 
-  <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
-                            </div>
+            <marquee>
+              <h2>Thanks for visiting website</h2>
+            </marquee>
+                             </div>
                                 <hr>  
     <div class="card-header"> 
       <div class="card">
@@ -53,16 +54,8 @@
 </div>
 </div>
 <hr>
-<div class="dropdown">
-     <button class=" dropdown-toggle" data-bs-toggle="dropdown">SELECT ONE WEBPAGE</button> 
-     <ul class="dropdown-menu">
-      <li><a clss="dropdown-item" href="notes.html"><h9> random notes</h9></a></li>
-            <li><a clss="dropdown-item" href="Cquestionpaper.html"><h9>College section</h9></a></li>
-      <li><a clss="dropdown-item" href="Squestionpaper.html"><h9>School section</h9></a></li> 
-      <li><a clss="dropdown-item" href="otherwebsite.html"><h9>Some other websites</h9></a></li>
-    </ul>
- </div>
- <br>
+<button class="btn btn-dark"><img class="image-5" src="images/jRHSpvVhANd3pMwuZb (1).gif"><a href="content.html">Menu</a></button>
+  <br><br>
 <div class="box-56"> 
  <h1 class="cen">NOTIFICATIONS</h1>
   <marquee direction="down" scrollamount="4" scrolldelay="3">
@@ -174,6 +167,10 @@ and you can write your problems ,then i will suggest you<c:\Users\DELL\Downloads
 
 </body>
 <style>
+  .image-5{
+    height: 40px;
+    margin-right: 2cm;
+  }
     .border-2{
         background-color: cadetblue;
     }
@@ -191,12 +188,7 @@ and you can write your problems ,then i will suggest you<c:\Users\DELL\Downloads
     width: 50px;
     height: 50px;
   }
-  .dropdown-toggle{
-    background-color: black;
-    color: red;
-    text-align: center;
-  }
-  .genius{
+   .genius{
     margin-left: 2cm;
   }
   .te{
@@ -211,8 +203,10 @@ and you can write your problems ,then i will suggest you<c:\Users\DELL\Downloads
     margin-left: 2cm;
   }
   .page{
-        margin-left: 1cm;
-    }
+        margin-left: 0.5cm;
+        display: flex;
+        background-color:yellow;
+     }
     .page2{
         margin-left: 1.5cm;
     }
@@ -389,5 +383,10 @@ height: 40px;
        .dropdown{
         text-align: center;
        }
+       .btn{
+        width: 250px;
+        margin-left: 1cm;
+        border-radius: 4cm;
+        }
      </style>
  </html>
