--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             text-decoration: none;
             color: greenyellow;
         }
-        button{
+       .btn {
             margin-left: 0.5cm;
         }
-     </style>
+      </style>
 </body>
 </html>
