--- a/notes.html
+++ b/notes.html
@@ -16,19 +16,9 @@
     <h2 <style'font-size:100px;'>&#9749;</style>RANDOM NOTES SECTION</h2>
 </marquee>
 <br>
-    <div class="dropdown">
-     <button class=" dropdown-toggle" data-bs-toggle="dropdown">SELECT ONE WEBPAGE</button> 
-     <ul class="dropdown-menu">
-        <li><a clss="dropdown-item" href="Squestionpaper.html"><h9>School section</h9></a></li> 
-      <li><a clss="dropdown-item" href="otherwebsite.html"><h9>Some other websites</h9></a></li>
-                  <li><a clss="dropdown-item" href="about.html"><h9>HOME</h9></a></li>
-            <li><a clss="dropdown-item" href="Cquestionpaper.html"><h9>College section</h9></a></li>
+ <button class="btn btn-dark"><img class="image-5" src="images/images/5k22wuQ6IgglmmdzB0.gif"><a href="about.html">Home</a></button>
 
-    </ul>
-    <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
- </div>
-
-   <hr>
+   <br><br>
    <div class="que">
   <a href="https://drive.google.com/file/d/1Wn8qVaMlBcAJCTk3whyxITKugNyzrFVs/view?usp=gmail">Computer-concept in hindi</a><sub><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sub>  
 </div>
@@ -112,6 +102,16 @@
         h9{
             color: chartreuse;
         }
+              .image-5{
+    height: 40px;
+    margin-right: 2cm;
+  }
+       .btn{
+        width: 250px;
+        margin-left: 1cm;
+        border-radius: 4cm;
+        }
+
 
  </style>
 </body>
