--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -16,18 +16,9 @@
         <h2 <style'font-size:100px;'>&#9749;</style>COLLEGE SECTION</h2>
     </marquee>
     <hr>
-    <div class="dropdown">
-     <button class=" dropdown-toggle" data-bs-toggle="dropdown">SELECT ONE WEBPAGE</button> 
-     <ul class="dropdown-menu">
-      <li><a clss="dropdown-item" href="notes.html"><h9> random notes</h9></a></li>
-       <li><a clss="dropdown-item" href="Squestionpaper.html"><h9>School section</h9></a></li> 
-      <li><a clss="dropdown-item" href="otherwebsite.html"><h9>Some other websites</h9></a></li>
-            <li><a clss="dropdown-item" href="about.html"><h9>HOME</h9></a></li>
+    <button class="btn btn-dark"><img class="image-5" src="images/images/5k22wuQ6IgglmmdzB0.gif"><a href="about.html">Home</a></button>
 
-    </ul>
-    <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
- </div>
-  <br>
+   <br><br>
      <div class="container-2"> 
         <div class="row-2">
             <div class="col"> 
@@ -146,6 +137,16 @@
     color:greenyellow;
     margin-left: 2.2cm;
   }
+        .image-5{
+    height: 40px;
+    margin-right: 2cm;
+  }
+       .btn{
+        width: 250px;
+        margin-left: 1cm;
+        border-radius: 4cm;
+        }
+
   .laptop{
         margin-left: 3cm;
     height: 150px;
