--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -17,18 +17,9 @@
     <h2 <style'font-size:100px;'>&#9749;</style>SCHOOL SECTION</h2>
 </marquee>
 <hr>
-    <div class="dropdown">
-     <button class=" dropdown-toggle" data-bs-toggle="dropdown">SELECT ONE WEBPAGE</button> 
-     <ul class="dropdown-menu">
-      <li><a clss="dropdown-item" href="notes.html"><h9> random notes</h9></a></li>
-       <li><a clss="dropdown-item" href="otherwebsite.html"><h9>Some other websites</h9></a></li>
-                  <li><a clss="dropdown-item" href="about.html"><h9>HOME</h9></a></li>
-            <li><a clss="dropdown-item" href="Cquestionpaper.html"><h9>College section</h9></a></li>
+<button class="btn btn-dark"><img class="image-5" src="images/images/5k22wuQ6IgglmmdzB0.gif"><a href="about.html">Home</a></button>
 
-    </ul>
-    <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
- </div>
-  <hr>
+    <br><br>
 <div class="container-2"> 
     <div class="row-2">
         <div class="col"> 
@@ -101,6 +92,16 @@
     </div>
 </div>
 <style>
+      .image-5{
+    height: 40px;
+    margin-right: 2cm;
+  }
+       .btn{
+        width: 250px;
+        margin-left: 1cm;
+        border-radius: 4cm;
+        }
+
     .box{
         height: 250px;
         width: 250px;
@@ -143,23 +144,16 @@
      .page3{
         margin-left: 2cm;
     }
-             .dropdown{
-            text-align: center;
-         }
-         .dropdown-toggle{
-            color: red;
-            background-color: black;
-         }
-        .dropdown-menu{
-            text-align: center;
-            color: red;
-            background-color: darkgreen;
-        }
-        h9{
+         h9{
             color: chartreuse;
         }
-
-    
+.image-5{
+    height: 40px;
+    margin-right: 2cm;
+}
+    btn{
+        width: 250px;
+    }
   table th td tr.colsetwidth{
     width: 50%;
   }
