--- a/otherwebsite.html
+++ b/otherwebsite.html
@@ -19,19 +19,9 @@
         <h2 <style'font-size:100px;'>&#9749;</style>other websites</h2>
     </marquee>
     <br>
-        <div class="dropdown">
-     <button class=" dropdown-toggle" data-bs-toggle="dropdown">SELECT ONE WEBPAGE</button> 
-     <ul class="dropdown-menu">
-      <li><a clss="dropdown-item" href="notes.html"><h9> random notes</h9></a></li>
-       <li><a clss="dropdown-item" href="Squestionpaper.html"><h9>School section</h9></a></li> 
-                   <li><a clss="dropdown-item" href="Cquestionpaper.html"><h9>College section</h9></a></li>
-            <li><a clss="dropdown-item" href="about.html"><h9>HOME</h9></a></li>
+ <button class="btn btn-dark"><img class="image-5" src="images/images/5k22wuQ6IgglmmdzB0.gif"><a href="about.html">Home</a></button>
 
-     </ul>
-    <a class="page3" href="https://wa.me/8684899869 "><i class="fa-brands fa-whatsapp fa-2xl" style="color: #FFD43B;"></i></a>
- </div>
-
- <br>
+ <br><br>
       <div class="box">
       <div class="deep1"> 
         <a href="https://bseh.org.in/home/"><img class="laptop" src="images/hbse.png"></a><h9 class="te">HBSE</h9><br>
@@ -107,20 +97,17 @@
      .page3{
         margin-left: 2cm;
     }
-            .dropdown{
-            text-align: center;
-         }
-         .dropdown-toggle{
-            color: red;
-            background-color: black;
-         }
-        .dropdown-menu{
-            text-align: center;
-            color: red;
-            background-color: olive;
-        }
-        h9{
+         h9{
             color: chartreuse;
+        }
+      .image-5{
+    height: 40px;
+    margin-right: 2cm;
+  }
+       .btn{
+        width: 250px;
+        margin-left: 1cm;
+        border-radius: 4cm;
         }
 
 </style>
