--- a/content.html
+++ b/content.html
@@ -15,18 +15,18 @@
 <body>
     <img class="laptop" src="images/images/786994_C_adbanao (1).png">
     <br>
-   <button class="btn btn-secondary"><img src="images/5k22wuQ6IgglmmdzB0.gif"><a href="Squestionpaper.html">School section</a></button>
+   <button class="btn btn-secondary"><img src="images/AsyjTHWbAtTkDOhUii.gif"><a href="Squestionpaper.html">School section</a></button>
        <br><br>
-    <button class="btn btn-dark"><img src="images/JGmjLpmTPS5QmgLFAM.gif"><a href="Cquestionpaper.html">College section</a></button>
+    <button class="btn btn-dark"><img src="images/53GF8GdQeu3Z03C66R.gif"><a href="Cquestionpaper.html">College section</a></button>
     <br><br>
-    <button class="btn btn-danger"><img src ="images/sGS7ZP1T8qaeq2k5MM.gif"><a href="notes.html">Rnadom -notes</a></button>
+    <button class="btn btn-danger"><img src ="images/images/cso08H97IHVI2swTOd.gif"><a href="notes.html">Rnadom -notes</a></button>
     <br><br>
-         <button class="btn btn-success"><img src="images/1sMGC0XjA1Hk58wppo.gif"><a href="otherwebsite.html">Other websites</a> </button>
+         <button class="btn btn-success"><img src="images/images/JGmjLpmTPS5QmgLFAM.gif"><a href="otherwebsite.html">Other websites</a> </button>
 <br><br>
-           <button class="btn btn-info"><img src="images/BwoY61dah9pq0S2aW7.gif"><a  href="https://wa.me/8684899869">Contact-1  </a></button>
+           <button class="btn btn-info"><img src="images/images/BwoY61dah9pq0S2aW7.gif"><a  href="https://wa.me/8684899869">Contact-1  </a></button>
      <br><br>
 
-           <button class="btn btn-secondary" > <a  href="mailto:05aggarwaldeepak@gmail.com"><img  src="images/acN91ftm1tJX23OOBx.gif">Contact -2</a></button> 
+           <button class="btn btn-secondary" > <img src="images/images/acN91ftm1tJX23OOBx.gif"><a  href="mailto:05aggarwaldeepak@gmail.com">Contact -2</a></button> 
   </div>
 <style>
     body{
