--- a/otherwebsite.html
+++ b/otherwebsite.html
@@ -19,7 +19,7 @@
         <h2 <style'font-size:100px;'>&#9749;</style>other websites</h2>
     </marquee>
     <br>
- <button class="btn btn-dark"><img class="image-5" src="images/images/5k22wuQ6IgglmmdzB0.gif"><a href="about.html">Home</a></button>
+ <button class="btn btn-warning"><img class="image-5" src="images/images/5k22wuQ6IgglmmdzB0.gif"><a class="text" href="about.html">Home</a></button>
 
  <br><br>
       <div class="box">
@@ -70,6 +70,9 @@
     margin-left: 2.2cm;
     color:black;
   }
+  .text{
+    color: black;
+  }
   .lapto{
     height: 150px;
     border-radius: 5cm;
@@ -100,9 +103,9 @@
          h9{
             color: chartreuse;
         }
-      .image-5{
-    height: 40px;
-    margin-right: 2cm;
+               .image-5{
+    height: 30px;
+    margin-right: 1cm;
   }
        .btn{
         width: 250px;
