--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -17,7 +17,7 @@
     <h2 <style'font-size:100px;'>&#9749;</style>SCHOOL SECTION</h2>
 </marquee>
 <hr>
-<button class="btn btn-dark"><img class="image-5" src="images/images/5k22wuQ6IgglmmdzB0.gif"><a href="about.html">Home</a></button>
+<button class="btn btn-dark"><img class="image-5" src="images/images/5k22wuQ6IgglmmdzB0.gif"><a class="text" href="about.html">Home</a></button>
 
     <br><br>
 <div class="container-2"> 
@@ -109,6 +109,9 @@
     }
      body{
   background-color: azure;
+     }
+     .text{
+        color: red;
      }
    .te{
     text-align: center;
