--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
      <div class="box"> 
       <img src="images/786994_C_adbanao.png">
       <button class="btn btn-danger"><a href="about.html">ENTER Website</a></button>
+      <br><br>
       <button class="btn btn-dark"> <a href="https://qr.me-qr.com/link-list/o5V6wNPO/show">Visit my V-CARD</a></button>
      </div>
      <style>
+        body{
+            background-color:blue;
+        }
                 img{
             margin-left: 1cm;
             height: 250px;
@@ -38,7 +42,9 @@
             color: greenyellow;
         }
        .btn {
-            margin-left: 0.5cm;
+            margin-left: 1.5cm;
+            width: 250px;
+            border-radius: 4cm;
         }
       </style>
 </body>
