--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
   <br>
           <div class="page">
             <img class="pic" src="images/SxRHd0zeO56LQk7Tgz.gif">
-            <marquee>
-              <h2>Thanks for visiting website</h2>
-            </marquee>
-                             </div>
+            <button class="btn btn-dark"><img class="image-5" src="images/jRHSpvVhANd3pMwuZb (1).gif"><a href="content.html">Menu</a></button>
+  <br><br>
+
+                              </div>
                                 <hr>  
     <div class="card-header"> 
       <div class="card">
@@ -54,9 +54,7 @@
 </div>
 </div>
 <hr>
-<button class="btn btn-dark"><img class="image-5" src="images/jRHSpvVhANd3pMwuZb (1).gif"><a href="content.html">Menu</a></button>
-  <br><br>
-<div class="box-56"> 
+ <div class="box-56"> 
  <h1 class="cen">NOTIFICATIONS</h1>
   <marquee direction="down" scrollamount="4" scrolldelay="3">
     <h6><a href="https://drive.google.com/file/d/1-JzAmUfgKAVj2Mi_3izTpXKJcApvbNPm/view?usp=drivesdk">12th notes of electrostatics</a><sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
@@ -159,10 +157,13 @@ and you can write your problems ,then i will suggest you<c:\Users\DELL\Downloads
 </div>
 <hr>
 <div class="border-2">
-                    website updated on: 01-August-2025 19:06 PM<br>
+  @2024 DEEPAK AGGARWAL
+                    website updated on: 05-August-2025 19:06 PM<br>
                     Website maintained,devloped by DEEPAK AGGARWAL
                     <hr>
+                    <marquee> 
                     <h7>Contact:8684899869</h7>
+                    </marquee>
                 </div>
 
 </body>
@@ -206,6 +207,7 @@ and you can write your problems ,then i will suggest you<c:\Users\DELL\Downloads
         margin-left: 0.5cm;
         display: flex;
         background-color:yellow;
+        margin-right: 0.5cm;
      }
     .page2{
         margin-left: 1.5cm;
