--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
 </div>
 <hr>
  <div class="box-56"> 
- <h1 class="cen">NOTIFICATIONS</h1>
-  <marquee direction="down" scrollamount="4" scrolldelay="3">
+  <img class="ring" src="images/wWaf4GVGFusjSKxpZj.gif">
+   <marquee direction="down" scrollamount="4" scrolldelay="3">
     <h6><a href="https://drive.google.com/file/d/1-JzAmUfgKAVj2Mi_3izTpXKJcApvbNPm/view?usp=drivesdk">12th notes of electrostatics</a><sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
     <h6>12th (medical/non-medical) question-paper-2025 released <sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
     <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
@@ -174,6 +174,12 @@ and you can write your problems ,then i will suggest you<c:\Users\DELL\Downloads
   }
     .border-2{
         background-color: cadetblue;
+    }
+    .ring{
+      height: 40px;
+      width: 40px;
+      margin-left: 4cm;
+      background-color: brown;
     }
     h7{
         text-align: center;
